Quick fix on mobile layout

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -29,6 +29,6 @@ $mobileWidth: 600px;
 %mainSection__mobile {
 	@media screen and (max-width: $mobileWidth) {
 		margin: 20px;
-		margin-right: 0;
+		margin-left: 0;
 	}
 }
